--- a/index.html
+++ b/index.html
@@ -361,10 +361,9 @@ body.custom-background { background-color: #3a3a3a; }
 			</button>
 					</div>
 				</div>
-		<div id="main-navigation" class="collapse navbar-collapse"><ul id="menu-primary-menu" class="nav navbar-nav"><li id="menu-item-12" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-6 current_page_item menu-item-12 active"><a title="Principal" href="https://clasesbateria-pinar.cf/">Principal</a></li>
-<li id="menu-item-68" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-68"><a title="Precios" href="https://clasesbateria-pinar.cf/precio-y-politicas/">Precios</a></li>
-<li id="menu-item-116" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-116"><a title="Instagram" href="https://www.instagram.com/elpinar.drums/">Instagram</a></li>
-<li id="menu-item-117" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-117"><a title="Facebook" href="https://web.facebook.com/elpinar.drums/">Facebook</a></li>
+		<div id="main-navigation" class="collapse navbar-collapse"><ul id="menu-primary-menu" class="nav navbar-nav"><li id="menu-item-68" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-68"><a title="Precios" href="https://clasesbateria-pinar.cf/precio-y-politicas/">Precios</a></li>
+<li id="menu-item-116" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-116"><a title="Instagram" target="_blank" href="https://www.instagram.com/elpinar.drums/">Instagram</a></li>
+<li id="menu-item-117" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-117"><a title="Facebook" target="_blank" href="https://web.facebook.com/elpinar.drums/">Facebook</a></li>
 </ul></div>			</div>
 					</nav>
 				</header>
@@ -516,9 +515,12 @@ body.custom-background { background-color: #3a3a3a; }
 							<footer class="footer footer-black footer-big">
 						<div class="container">
 																<div class="hestia-bottom-footer-content"><ul id="menu-futermenu" class="footer-menu pull-left"><li id="menu-item-120" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-120"><a href="https://clasesbateria-pinar.cf/precio-y-politicas/">Precios</a></li>
-<li id="menu-item-121" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-121"><a href="http://https://www.instagram.com/elpinar.drums/">Instagram</a></li>
-<li id="menu-item-122" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-122"><a href="https://web.facebook.com/elpinar.drums/">Facebook</a></li>
-</ul>		</div>			</div>
+<li id="menu-item-121" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-121"><a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/elpinar.drums/">Instagram</a></li>
+<li id="menu-item-122" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-122"><a target="_blank" rel="noopener noreferrer" href="https://web.facebook.com/elpinar.drums/">Facebook</a></li>
+</ul>					<div class="copyright pull-right">
+				@elpinar.drums
+			</div>
+			</div>			</div>
 					</footer>
 				</div>
 	</div>
