--- a/index.html
+++ b/index.html
@@ -328,7 +328,23 @@ var ajax_sib_front_object = {"ajax_url":"https:\/\/clasesbateria-pinar.cf\/wp-ad
 <link rel='shortlink' href='https://clasesbateria-pinar.cf/' />
 <link rel="alternate" type="application/json+oembed" href="https://clasesbateria-pinar.cf/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fclasesbateria-pinar.cf%2F" />
 <link rel="alternate" type="text/xml+oembed" href="https://clasesbateria-pinar.cf/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fclasesbateria-pinar.cf%2F&#038;format=xml" />
-	<noscript><style>.woocommerce-product-gallery{ opacity: 1 !important; }</style></noscript>
+<!-- Facebook Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '2305339452927501');
+  fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=2305339452927501&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Facebook Pixel Code -->	<noscript><style>.woocommerce-product-gallery{ opacity: 1 !important; }</style></noscript>
 	
 <!-- Facebook Pixel Code -->
 <script type='text/javascript'>
