--- a/precio-y-politicas/index.html
+++ b/precio-y-politicas/index.html
@@ -346,6 +346,9 @@ var ajax_sib_front_object = {"ajax_url":"https:\/\/clasesbateria-pinar.cf\/wp-ad
 /></noscript>
 <!-- End Facebook Pixel Code -->
 <!--BEGIN: TRACKING CODE MANAGER BY INTELLYWP.COM IN HEAD//-->
+<script>
+  fbq('track', 'ViewContent');
+</script>
 <!-- Facebook Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
