--- a/precio-y-politicas/index.html
+++ b/precio-y-politicas/index.html
@@ -345,7 +345,7 @@ var ajax_sib_front_object = {"ajax_url":"https:\/\/clasesbateria-pinar.cf\/wp-ad
   src="https://www.facebook.com/tr?id=2305339452927501&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Facebook Pixel Code -->
-google-site-verification=Lqu6EDWWv1uQwtF6aTFC2MxRdkmDV3Bph-FORYvvN10
+<meta name="google-site-verification" content="Lqu6EDWWv1uQwtF6aTFC2MxRdkmDV3Bph-FORYvvN10" />
 <!--BEGIN: TRACKING CODE MANAGER BY INTELLYWP.COM IN HEAD//-->
 <script>
   fbq('track', 'ViewContent');
